<resources>
    <string name="app_name">Gold Market</string>
    <string name="get_started">Get Started</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="toc">Terms and Conditions</string>
    <string name="welcome">WELCOME</string>
    <string name="welcome_greet">Invest your assets to gold!</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="dont_have_account">Don\'t Have Account?</string>
    <string name="register_with_us">Register with us!</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="go_sign_in">Go sign in!</string>
    <string name="go_create_acc">Let’s create your account!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="history_empty_info">Oops! You have no history transaction</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="current_pocket">Current Pocket</string>
    <string name="sign_out">Sign Out</string>
    <string name="email_address">myemail@mail.com</string>
    <string name="pocket">Pocket</string>
    <string name="balance">Balance</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="new_pocket">New Pocket</string>
    <string name="pocket_name">Pocket Name</string>
    <string name="welcome_home">Welcome, %1$s %2$s!</string>
    <string name="gram_format">%.2f gram</string>
<!--    <string name="currency_format">Rp %,.0f</string>-->
    <string name="currency_format">Rp %,d</string>
    <string name="pocket_type">Pocket type: %1$s</string>
    <string name="transaction">Transaction</string>
    <string name="submit_transaction">Submit Transaction</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="enter_amount_in_gram">Enter amount in gram</string>
    <string name="input_amount_in_gram">Input Amount in Gram</string>
    <string name="alert_not_have_pocket">Oops! You don\'t have any pocket. Please create and select it before click buy or sell</string>
    <string name="alert_pick_pocket">Select or create your pocket to make a transaction</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="platinum">Platinum</string>
    <string name="edit_pocket_name">Edit Pocket Name</string>
</resources>