<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/edit_customer"
        android:gravity="center"
        android:paddingHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/gm_primary"
        android:textSize="20dp"
        android:fontFamily="@font/asap_bold"
        android:contentDescription="@string/app_name" />
    <EditText
        android:id="@+id/first_name_dialog"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/asap"
        android:hint="@string/first_name" />
    <EditText
        android:id="@+id/last_name_dialog"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/asap"
        android:hint="@string/last_name"/>
</LinearLayout>