<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/gm_primary"
        android:baselineAligned="false"
        android:contentDescription="@string/app_name"
        android:fontFamily="@font/asap_bold"
        android:gravity="center"
        android:paddingHorizontal="40dp"
        android:scaleType="center"
        android:text="@string/edit_pocket_name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/pocket_name_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/asap"
        android:hint="@string/pocket_name"
        android:inputType="textPersonName"
        android:textColor="@color/gm_dark_grey"
        android:textSize="18sp" />

</LinearLayout>