<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/new_pocket"
        android:gravity="center"
        android:paddingHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:scaleType="center"
        android:background="@color/gm_primary"
        android:textSize="22sp"
        android:fontFamily="@font/asap_bold"
        android:contentDescription="@string/app_name" />
    <EditText
        android:id="@+id/pocket_name_dialog"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/asap"
        android:textSize="18sp"
        android:textColor="@color/gm_dark_grey"
        android:hint="@string/pocket_name" />

    <TextView
        android:id="@+id/text_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/asap"
        android:textColor="@color/gm_dark_grey"
        android:text="Product: Gold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text_disclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:text="Other product in development"
        android:textSize="12sp"/>


</LinearLayout>