<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.onboarding.login.LoginFragment">

    <View
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:background="@drawable/radius_bottom_only"
        android:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <ImageView
        android:id="@+id/loginImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:src="@drawable/ic_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background" />

        <EditText
        android:id="@+id/textLoginUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:fontFamily="@font/asap_bold"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/gm_dark_grey"
        app:layout_constraintBottom_toTopOf="@+id/textLoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome"
        app:layout_constraintVertical_chainStyle="packed" />

        <EditText
        android:id="@+id/textLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:fontFamily="@font/asap_bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/gm_dark_grey"
        app:layout_constraintBottom_toTopOf="@+id/textForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLoginUsername" />

        <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/login"
        android:textColor="@color/gm_dark_grey"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginImage" />

        <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:height="60dp"
        android:background="@color/gm_primary"
        android:backgroundTint="@color/gm_primary"
        android:fontFamily="@font/asap_bold"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textToRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        <TextView
        android:id="@+id/textForgotPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:contextClickable="true"
        android:fontFamily="@font/asap_bold"
        android:text="@string/forgot_pass"
        android:textColor="@color/gm_primary"
        android:textColorLink="@color/gm_primary_dark"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLoginPassword" />

        <TextView
        android:id="@+id/textHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/dont_have_account"
        android:textColor="@color/gm_dark_grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textToRegister"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

        <TextView
        android:id="@+id/textToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/register_with_us"
        android:textColor="@color/gm_primary"
        android:textColorLink="@color/gm_primary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textHaveAcc" />

        <TextView
        android:id="@+id/textLoginMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/go_create_acc"
        android:textColor="@color/gm_dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />

        <ImageButton
        android:id="@+id/showPassLogin"
        android:layout_width="28dp"
        android:layout_height="27dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/textLoginPassword"
        app:layout_constraintEnd_toEndOf="@+id/textLoginPassword"
        app:layout_constraintTop_toTopOf="@+id/textLoginPassword"
        app:srcCompat="@drawable/ic_password_hidden" />
    </androidx.constraintlayout.widget.ConstraintLayout>