<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".maintab.MainTabActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:baselineAligned="false">


        <FrameLayout
            android:id="@+id/home_tab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gm_primary"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btn_home"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="top"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_home" />

            <TextView
                android:id="@+id/home_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:clickable="false"
                android:background="@android:color/transparent"
                android:layout_marginBottom="2dp"
                android:text="@string/home" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/history_tab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gm_primary"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btn_history"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="top"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_history" />

            <TextView
                android:id="@+id/history_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:clickable="false"
                android:layout_marginBottom="2dp"
                android:text="@string/history" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/profile_tab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gm_primary"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btn_profile"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center|top"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_profile_user" />

            <TextView
                android:id="@+id/profile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:clickable="false"
                android:layout_marginBottom="2dp"
                android:text="@string/profile" />

        </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/gm_white"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>